--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
                 <li class="menu"><a href="about us.html">About us </a></li>
                 <li class="menu">Contact</li>
                 <li class="menu">Language</li>
- 
+ <li>add new menu</li>
             </ul>
           
         </header>
